# Cargo-rustup

./: Cargo.toml
GuessGame/: Cargo.toml
GuessGame/src/: main.rs
Practice/hello-web/: Cargo.toml
Practice/hello-web/src/: main.rs
Practice/simple-api-rust-axum/: Cargo.toml
Practice/simple-api-rust-axum-master/: Cargo.toml
Practice/simple-api-rust-axum-master/src/: handler.rs  main.rs
Practice/simple-api-rust-axum/src/: main.rs
src/: main.rs
