[package]
name = "simple-api-rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }


# cargo add axum
# cargo add tokio -F full
# cargo add chrono -F serde
# cargo add serde -F derive
# cargo add serde_json
# cargo add uuid -F "v4 serde"
# cargo add tower-http -F "cors"
# cargo install cargo-watch
# cargo watch -q -c -w src/ -x run